--- a/Project/Konecte/login.html
+++ b/Project/Konecte/login.html
@@ -2,68 +2,127 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-    <link rel="stylesheet" href="./src/css/konecte.css">
-    <title>Konecte</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+  <link rel="stylesheet" href="./src/css/konecte.css">
+  <title>Konecte</title>
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="fixed-top">
-        <div class="website-mockup">
-            <div class="header">
-                <div class="logo"><a href="index.html">Konekté</a></div>
-                <nav class="nav">
-                    <a href="events.html">Browse Events</a>
-                    <a href="create.html">Create Event</a>
-                    <a href="bookings.html">Bookings</a>
-                    <a href="login.html">Login</a>
-                </nav>
-                <!-- Hamburger -->
-                <div class="hamburger" onclick="toggleMobileMenu()">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-            <div class="mobile-nav" id="mobileNav">
-                <a href="events.html">Browse Events</a>
-                <a href="create.html">Create Event</a>
-                <a href="bookings.html">Bookings</a>
-                <a href="login.html">Login</a>
-            </div>
+  <!-- Navbar -->
+  <nav class="fixed-top">
+    <div class="website-mockup">
+      <div class="header">
+        <div class="logo"><a href="index.html">Konekté</a></div>
+        <nav class="nav">
+          <a href="events.html">Browse Events</a>
+          <!-- <a href="create.html">Create Event</a>
+          <a href="bookings.html">Bookings</a> -->
+          <a href="login.html">Login</a>
+        </nav>
+        <!-- Hamburger -->
+        <div class="hamburger" onclick="toggleMobileMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
-    </nav>
-    <!-- end navbar -->
-
-    <!-- Login form -->
-     <br><br>
-    <div class="form-body">
-        <form class="login-form" action="login.php" method="POST">
-            <div class="form-group">
-                <label class="form-label" for="email">Email Address</label>
-                <input type="email" id="email" name="email" class="form-input" placeholder="Enter your email" required>
-            </div>
-
-            <div class="form-group">
-                <label class="form-label" for="password">Password</label>
-                <input type="password" id="password" name="password" class="form-input"
-                    placeholder="Enter your password" required>
-            </div>
-
-            <button type="submit" class="login-btn">Sign In</button>
-
-            <div class="forgot-password">
-                <a href="forgot-password.html">Forgot your password?</a>
-            </div>
-        </form>
+      </div>
+      <div class="mobile-nav" id="mobileNav">
+        <a href="events.html">Browse Events</a>
+        <a href="create.html">Create Event</a>
+        <a href="bookings.html">Bookings</a>
+        <a href="login.html">Login</a>
+      </div>
     </div>
-    <!-- end form -->
+  </nav>
+  <!-- end navbar -->
+  <!-- Auth container -->
+  <div class="auth-container">
+    <div class="auth-card">
+      <div class="auth-header">
+        <h1 class="auth-title">Welcome Back</h1>
+        <p class="auth-subtitle">Sign in to your account or create a new one</p>
+      </div>
 
-    <!-- Footer -->
+      <!-- Tab switcher -->
+      <div class="auth-tabs">
+        <div class="auth-tab active" onclick="switchTab('signin')">Sign In</div>
+        <div class="auth-tab" onclick="switchTab('signup')">Sign Up</div>
+      </div>
+
+      <!-- Messages -->
+      <div class="success-message" id="successMessage"></div>
+      <div class="error-message" id="errorMessage"></div>
+
+      <!-- Sign In Form -->
+      <form class="auth-form active" id="signinForm" action="auth.php" method="POST">
+        <input type="hidden" name="action" value="signin">
+
+        <div class="form-group">
+          <label class="form-label" for="signin-email">Email Address</label>
+          <input type="email" id="signin-email" name="email" class="form-input" placeholder="Enter your email" required>
+        </div>
+
+        <div class="form-group">
+          <label class="form-label" for="signin-password">Password</label>
+          <input type="password" id="signin-password" name="password" class="form-input"
+            placeholder="Enter your password" required>
+        </div>
+
+        <button type="submit" class="auth-btn">Sign In</button>
+
+        <div class="forgot-password">
+          <a href="forgot-password.html">Forgot your password?</a>
+        </div>
+      </form>
+
+      <!-- Sign Up Form -->
+      <form class="auth-form" id="signupForm" action="auth.php" method="POST">
+        <input type="hidden" name="action" value="signup">
+
+        <div class="form-row">
+          <div class="form-group">
+            <label class="form-label" for="signup-firstname">First Name</label>
+            <input type="text" id="signup-firstname" name="firstname" class="form-input" placeholder="First name"
+              required>
+          </div>
+          <div class="form-group">
+            <label class="form-label" for="signup-lastname">Last Name</label>
+            <input type="text" id="signup-lastname" name="lastname" class="form-input" placeholder="Last name" required>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="form-label" for="signup-email">Email Address</label>
+          <input type="email" id="signup-email" name="email" class="form-input" placeholder="Enter your email" required>
+        </div>
+
+        <div class="form-group">
+          <label class="form-label" for="signup-password">Password</label>
+          <input type="password" id="signup-password" name="password" class="form-input" placeholder="Create a password"
+            required oninput="checkPasswordStrength(this.value)">
+          <div class="password-strength" id="passwordStrength">
+            <div class="strength-bar">
+              <div class="strength-fill" id="strengthFill"></div>
+            </div>
+            <span id="strengthText">Password strength</span>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="form-label" for="signup-confirm">Confirm Password</label>
+          <input type="password" id="signup-confirm" name="confirm_password" class="form-input"
+            placeholder="Confirm your password" required>
+        </div>
+
+        <button type="submit" class="auth-btn">Create Account</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-container">
       <!-- About Section -->
@@ -88,12 +147,9 @@
     </div>
   </footer>
 
-    <!-- external js -->
-    <script src="./src/js/script.js"></script>
-    <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
+   <!-- external js -->
+  <script src="./src/js/script.js"></script>
+  <!-- bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
